--- a/Notifications.Wpf.Core.Sample/Notifications.Wpf.Core.Sample.csproj
+++ b/Notifications.Wpf.Core.Sample/Notifications.Wpf.Core.Sample.csproj
@@ -4,6 +4,8 @@
     <OutputType>WinExe</OutputType>
     <TargetFramework>netcoreapp3.0</TargetFramework>
     <UseWPF>true</UseWPF>
+    <LangVersion>8.0</LangVersion>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
