--- a/Notifications.Wpf.Core/Notifications.Wpf.Core.csproj
+++ b/Notifications.Wpf.Core/Notifications.Wpf.Core.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.0</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
     <UseWPF>true</UseWPF>
     <LangVersion>8.0</LangVersion>
     <Nullable>enable</Nullable>
@@ -9,12 +9,19 @@
     <PackageId>Notifications.Wpf.Core</PackageId>
     <Authors>Adrian Gaś, Simon Mauracher, Marcel Juen</Authors>
     <Company />
-    <Description>Toast notifications for WPF apps based on .NET Core 3.0. This is a fork of Notifications.Wpf by Adrian Gaś</Description>
+    <Description>Toast notifications for WPF apps based on .NET Core 3.1. This is a fork of Notifications.Wpf by Adrian Gaś</Description>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageProjectUrl>https://github.com/mjuen/Notifications.Wpf.Core</PackageProjectUrl>
+    <PackageIcon>icon.png</PackageIcon>
     <PackageIconUrl>https://raw.githubusercontent.com/mjuen/Notifications.Wpf.Core/master/Resources/icon.png</PackageIconUrl>
     <RepositoryUrl>https://github.com/mjuen/Notifications.Wpf.Core</RepositoryUrl>
-    <Version>1.1.2</Version>
+    <Version>1.2.0</Version>
+    <AssemblyVersion>1.2.0.0</AssemblyVersion>
+    <FileVersion>1.2.0.0</FileVersion>
   </PropertyGroup>
 
+
+  <ItemGroup>
+    <None Include="..\Resources\icon.png" Pack="true" Visible="false" PackagePath="" />
+  </ItemGroup>
 </Project>
