--- a/Notifications.Wpf.Core/Notifications.Wpf.Core.csproj
+++ b/Notifications.Wpf.Core/Notifications.Wpf.Core.csproj
@@ -15,10 +15,12 @@
     <PackageIcon>icon.png</PackageIcon>
     <PackageIconUrl>https://raw.githubusercontent.com/mjuen/Notifications.Wpf.Core/master/Resources/icon.png</PackageIconUrl>
     <RepositoryUrl>https://github.com/mjuen/Notifications.Wpf.Core</RepositoryUrl>
-    <Version>1.3.1</Version>
-    <AssemblyVersion>1.3.1.0</AssemblyVersion>
-    <FileVersion>1.3.1.0</FileVersion>
+    <Version>1.3.2</Version>
+    <AssemblyVersion>1.3.2.0</AssemblyVersion>
+    <FileVersion>1.3.2.0</FileVersion>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <SignAssembly>true</SignAssembly>
+    <AssemblyOriginatorKeyFile>strong-name-cert.pfx</AssemblyOriginatorKeyFile>
   </PropertyGroup>
 
 
