--- a/Notifications.Wpf.Core/Notifications.Wpf.Core.csproj
+++ b/Notifications.Wpf.Core/Notifications.Wpf.Core.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net6.0-windows</TargetFramework>
+    <TargetFramework>net8.0-windows7.0</TargetFramework>
     <UseWPF>true</UseWPF>
     <LangVersion>8.0</LangVersion>
     <Nullable>enable</Nullable>
@@ -9,15 +9,15 @@
     <PackageId>Notifications.Wpf.Core</PackageId>
     <Authors>Adrian Gaś, Simon Mauracher, Marcel Juen</Authors>
     <Company />
-    <Description>Toast notifications for WPF apps based on .NET 6. This is a fork of Notifications.Wpf by Adrian Gaś</Description>
+    <Description>Toast notifications for WPF apps based on .NET 8. This is a fork of Notifications.Wpf by Adrian Gaś</Description>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageProjectUrl>https://github.com/mjuen/Notifications.Wpf.Core</PackageProjectUrl>
     <PackageIcon>icon.png</PackageIcon>
     <PackageIconUrl>https://raw.githubusercontent.com/mjuen/Notifications.Wpf.Core/master/Resources/icon.png</PackageIconUrl>
     <RepositoryUrl>https://github.com/mjuen/Notifications.Wpf.Core</RepositoryUrl>
-    <Version>1.4.1</Version>
-    <AssemblyVersion>1.4.1.0</AssemblyVersion>
-    <FileVersion>1.4.1.0</FileVersion>
+    <Version>2.0.0</Version>
+    <AssemblyVersion>2.0.0.0</AssemblyVersion>
+    <FileVersion>2.0.0.0</FileVersion>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>strong-name-cert.pfx</AssemblyOriginatorKeyFile>
